XMLtoCSV/objects/unpackaged/objects/Lot_Catalog_vod__c.object
<CustomObject>
    <description>Lot Catalog contains a list of all Samples and Lot #s available for Sample Transactions for the entire organization.  The Lot Catalog acts as the base for user-specific Sample Lot creation.</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active checkbox determines if the Lot Catalog is available for the creation of Sample Lots.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_vod__c</fullName>
        <description>Expiration Date is the Expiration Date for the Lot Catalog.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_ID_vod__c</fullName>
        <description>Item Id represents an Organization&apos;s unique identifier from a Back-office system for a specific Sample.</description>
        <label>Item Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Catalog_External_Id_vod__c</fullName>
        <description>Lot Catalog External Id is an external Id field to support data loading and upsert functionality of an organization&apos;s Lot Catalog.  Lot Catalog External Id is equal to the Lot # of Lot Catalog and is managed by a workflow on Lot Catalog.</description>
        <externalId>true</externalId>
        <label>Lot Catalog External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product for which the lot catalog applies;Lookup to Product Catalog</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Lot Catalog</relationshipLabel>
        <relationshipName>Lot_Catalog_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample_Description_vod__c</fullName>
        <description>Sample Description is the textual description of a specific Sample.</description>
        <label>Sample Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_vod__c</fullName>
        <description>Sample is the Sample name for the Lot Catalog record.</description>
        <label>Sample</label>
        <picklist>
            <picklistValues>
                <fullName>Cholecap 10mg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cholecap 20mg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cholecap 30mg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restolar .5mg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restolar 1mg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labrinone 10mg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labrinone 20mg</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suppress_Lot_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to include BRC, Alternative Samples, High Value Promotional, Promotional, Reprint, or Custom product types in Sample Management functionality without the use of Lot Numbers.</description>
        <label>Suppress Lot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>U_M_vod__c</fullName>
        <description>U/M is the Unit of Measurement for the Lot Catalog record.</description>
        <label>U/M</label>
        <picklist>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Lot Catalog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sample_vod__c</columns>
        <columns>Sample_Description_vod__c</columns>
        <columns>Expiration_Date_vod__c</columns>
        <columns>Active_vod__c</columns>
        <columns>Item_ID_vod__c</columns>
        <columns>U_M_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_d_2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lot #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lot Catalog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Non_Sample_Lot_Name_vod</fullName>
        <active>true</active>
        <description>Ensures that a value of No_Lot_vod is input into the Lot # feld when creating a Lot Catalog record for a non-Sample product that has no associated Lot #s.</description>
        <errorConditionFormula>AND(Suppress_Lot_vod__c  = true,  Name != &apos;No_Lot_vod&apos;)</errorConditionFormula>
        <errorMessage>Lot # field must contain the value &apos;No_Lot_vod for a non-Sample product with no Lot #.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Sample_Required_Fields_vod</fullName>
        <active>true</active>
        <description>Ensures that a value is selected for the Product Name when creating a Lot Catalog record for a non-Sample product that has no associated Lot #s. This field is required to determine both the Product and Product type the record is being created for.</description>
        <errorConditionFormula>AND(Suppress_Lot_vod__c  = true,  Product_vod__c == null)</errorConditionFormula>
        <errorMessage>Product Name field is required to create a Lot Catalog record for a non-Sample product with no Lot #</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Sample_Suppress_Lot_vod</fullName>
        <active>true</active>
        <description>Ensures that Suppress Lot is checked when a value of &apos;No_Lot_vod&apos; is input into the Lot # field when creating a Lot Catalog record for a non-Sample product.</description>
        <errorConditionFormula>And(Name = &apos;No_Lot_vod&apos;, Suppress_Lot_vod__c = false)</errorConditionFormula>
        <errorMessage>Suppress Lot must be checked when using the &apos;No_Lot_vod&apos; Lot # name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sample_Required_Fields_vod</fullName>
        <active>true</active>
        <description>Ensures that a value is input for either Sample or Product look up when creating a Lot Catalog record for a traditional Sample product that has associated Lot #s.</description>
        <errorConditionFormula>AND(Suppress_Lot_vod__c = false,  AND(ISPICKVAL( Sample_vod__c , &apos;&apos;) ,  Product_vod__c == null))</errorConditionFormula>
        <errorMessage>Either Sample field or Product  is required to create a Lot Catalog record for a Sample product with Lot #</errorMessage>
    </validationRules>
</CustomObject>